src/objects/StudentSubmission__c.object
<CustomObject>
    <description>Staging object, used to load in all data from student sign-ups</description>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>Address Line 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AnyOtherInfo__c</fullName>
        <inlineHelpText>Is there any other information about you that you would like us to be aware of?</inlineHelpText>
        <label>Any Other Info</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certain_I_understand_difficult_material__c</fullName>
        <inlineHelpText>I&apos;m certain I can understand the most difficult material presented in this course.</inlineHelpText>
        <label>Certain I understand difficult material</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommentsorQuestions__c</fullName>
        <inlineHelpText>Please let us know if you have any comments or questions regarding your participation in the Get Further programme:</inlineHelpText>
        <label>Comments or Questions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConsenttoPersonalInfoBeingProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>[I consent for sensitive personal information to be processed as set out in this notice.]</inlineHelpText>
        <label>Consent to Personal Info Being Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Disability__c</fullName>
        <description>Under the Equality Act 2010 a person is classified as disabled if they have a physical or mental impairment which has a substantial and long term effect on their ability to carry out normal day to day activities.</description>
        <label>Living With A Disability?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Gender__c</fullName>
        <description>What gender do you most identify with?</description>
        <label>Gender Most Identified With</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Non-Binary</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Subject__c</fullName>
        <label>Subject / Area of study</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courses_Studying_This_Year__c</fullName>
        <inlineHelpText>Please provide the name of the course(s) you are studying this year:</inlineHelpText>
        <label>Courses Studying This Year</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DateSubmitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofBirth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EthnicGroupBackground__c</fullName>
        <label>Ethnic Group/Background</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White British</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Traveller of Irish heritage</fullName>
                </value>
                <value>
                    <fullName>Gypsy / Roma</fullName>
                </value>
                <value>
                    <fullName>Any other white background</fullName>
                </value>
                <value>
                    <fullName>White and black Caribbean</fullName>
                </value>
                <value>
                    <fullName>White and black African</fullName>
                </value>
                <value>
                    <fullName>White and Asian</fullName>
                </value>
                <value>
                    <fullName>Any other mixed background</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi</fullName>
                </value>
                <value>
                    <fullName>Any other Asian background</fullName>
                </value>
                <value>
                    <fullName>Black Caribbean</fullName>
                </value>
                <value>
                    <fullName>Black African</fullName>
                </value>
                <value>
                    <fullName>Any other black background</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Any other ethnic group</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EverHadaSocialWorker__c</fullName>
        <label>Ever Had a Social Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excellent_job_on_assignments__c</fullName>
        <inlineHelpText>I&apos;m confident I can do an excellent job on the assignments and tests in this course.</inlineHelpText>
        <label>Excellent job on assignments</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expect_to_do_well__c</fullName>
        <inlineHelpText>I expect to do well in this course.</inlineHelpText>
        <label>Expect to do well</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feel_helpless__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [I feel helpless when doing tasks in English lessons.] [I feel helpless when doing a mathematics problem.]</inlineHelpText>
        <label>Feel helpless</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_school_college_meals__c</fullName>
        <label>Free School/College Meals?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralUnderstanding__c</fullName>
        <inlineHelpText>Tick the boxes you agree with:</inlineHelpText>
        <label>General Understanding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pictures help me to understand a task</fullName>
                </value>
                <value>
                    <fullName>Sometimes I know the answer, but I do not know how to say it in English</fullName>
                </value>
                <value>
                    <fullName>It helps me when teachers translate worksheets into my language</fullName>
                </value>
                <value>
                    <fullName>It helps me when I can speak to someone, in my first language, about the work</fullName>
                </value>
                <value>
                    <fullName>Sometimes, I don&apos;t understand what the teacher is saying</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Get_good_grades_in_subject__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [I get good grades in English.]
 [I get good grades in mathematics.]</inlineHelpText>
        <label>Get good grades in subject</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GradeAwardedforMaths__c</fullName>
        <label>Grade Awarded for Maths</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Awarded_for_English__c</fullName>
        <label>Grade Awarded for English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Had_extra_help_from_tutor__c</fullName>
        <description>Has student had extra help from a tutor in maths before (this does not include help from teachers in
school or college)</description>
        <inlineHelpText>Has student had extra help from a tutor in maths before (this does not include help from teachers in
school or college)</inlineHelpText>
        <label>Had Extra Help From Tutor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_no_prefernottosay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HappytoReceiveSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>[I am happy to receive text/Whatsapp messages or emails from Get Further about tutoring sessions and upcoming events.]</inlineHelpText>
        <label>Happy to Receive SMS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HowLongSpeakingEnglish__c</fullName>
        <label>How Long Speaking English</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All my life</fullName>
                </value>
                <value>
                    <fullName>From between age 1 and age 5</fullName>
                </value>
                <value>
                    <fullName>From between age 6 and age 11</fullName>
                </value>
                <value>
                    <fullName>From between age 12 to age 16</fullName>
                </value>
                <value>
                    <fullName>From age 17 or later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_confident_do_you_feel_1__c</fullName>
        <inlineHelpText>How confident do you feel about having to do the following tasks: [Figuring out difficult words by yourself when you read.] [Calculating how much cheaper a TV would be after a 30% discount.]</inlineHelpText>
        <label>How confident do you feel 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_confident_do_you_feel_2__c</fullName>
        <label>How confident do you feel 2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_confident_do_you_feel_3__c</fullName>
        <inlineHelpText>How confident do you feel about having to do the following tasks: [Summarising a one-page extract from a novel, after you finish reading it.] [Calculating how many square metres of tiles you need to cover a floor.]</inlineHelpText>
        <label>How confident do you feel 3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_can_master_skills__c</fullName>
        <inlineHelpText>I&apos;m certain I can master the skills being taught in this course.</inlineHelpText>
        <label>I can master skills</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_get_very_tense_homework__c</fullName>
        <inlineHelpText>Thinking about studying English: to what extent do you agree with the following statements? [I get very tense when I have to do English homework.][I get very tense when I have to do mathematics homework.]</inlineHelpText>
        <label>I get very tense - homework</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_often_worry__c</fullName>
        <inlineHelpText>Thinking about studying English: to what extent do you agree with the following statements? [I often worry that it will be difficult for me in English classes.] [I often worry that it will be difficult for me in mathematics classes.]</inlineHelpText>
        <label>I often worry - classes</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ill_receive_excellent_grade__c</fullName>
        <inlineHelpText>I believe I will receive an excellent grade in this English course.
I believe I will receive an excellent grade in this maths course.</inlineHelpText>
        <label>I&apos;ll receive excellent grade</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Just_not_good_at_subject__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [I am just not good at English.] [I am just not good at mathematics.]</inlineHelpText>
        <label>Just not good at subject</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LanguageSpokenatHome__c</fullName>
        <label>Language Spoken at Home</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learn_subject_quickly__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [I learn quickly in English lessons.] [I learn mathematics quickly.]</inlineHelpText>
        <label>Learn subject quickly</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nervous_doing_tasks_in_lesson__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [I get very nervous doing tasks in English lessons.] [I get very nervous doing mathematics problems.]</inlineHelpText>
        <label>Nervous doing tasks in lesson</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Steps_After_Course__c</fullName>
        <inlineHelpText>What do you see as your next steps once you have completed this course(s)?</inlineHelpText>
        <label>Next Steps After Course</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_of_my_best_subjects__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [I believe that English is one of my best subjects.] [I believe that mathematics is one of my best subjects.]</inlineHelpText>
        <label>One of my best subjects</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousAttemptGCSEinMaths__c</fullName>
        <label>Previous Attempt GCSE in Maths?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_no_prefernottosay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Attempt_GCSE_in_English__c</fullName>
        <inlineHelpText>Have you previously attempted a GCSE in your chosen subject?</inlineHelpText>
        <label>Previous Attempt GCSE in English?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <label>Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsReading__c</fullName>
        <label>Rate English Skills: Reading</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsSpeaking__c</fullName>
        <label>Rate English Skills: Speaking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsUnderstandSpeech__c</fullName>
        <inlineHelpText>How would you rate your English language skills? [Understanding spoken English]</inlineHelpText>
        <label>Rate English Skills: Understand Speech</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateEnglishSkillsWriting__c</fullName>
        <label>Rate English Skills: Writing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Poor_Excellent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_tutor_will_help_choice__c</fullName>
        <description>Reason for your choice of answer to &apos;Do you think having a tutor will help you to reach your next steps? Please indicate (x) in the relevant&apos;</description>
        <inlineHelpText>Reason for your choice of answer to &apos;Do you think having a tutor will help you to reach your next steps? Please indicate (x) in the relevant&apos;</inlineHelpText>
        <label>Reason for tutor will help choice</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Receipt_of_Benefits__c</fullName>
        <label>Receipt of Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialEducationalNeed__c</fullName>
        <label>Special Educational Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_no_prefernottosay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentIDifKnown__c</fullName>
        <label>Student ID if Known</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudySupporterFirstName__c</fullName>
        <label>Study Supporter First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudySupporterLastName__c</fullName>
        <label>Study Supporter Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudySupporterMobile__c</fullName>
        <label>Study Supporter Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>StudySupporterRelationship__c</fullName>
        <label>Study Supporter Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Think_Ill_do_well__c</fullName>
        <inlineHelpText>Considering the difficulty of this course, and my skills, I think I will do well in this course.</inlineHelpText>
        <label>Think I&apos;ll do well</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TuitionGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tuition Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TutorWillHelp__c</fullName>
        <label>Tutor Will Help?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_no_prefernottosay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understand_basic_concepts__c</fullName>
        <inlineHelpText>I&apos;m confident I can understand the basic concepts taught in this course.</inlineHelpText>
        <label>Understand basic concepts</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Understand_complex_material__c</fullName>
        <inlineHelpText>I&apos;m confident I can understand the most complex material presented by the tutor in this course.</inlineHelpText>
        <label>Understand complex material</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Understand_difficult_work__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [In my English class, I understand even the most difficult work.] [In my mathematics class, I understand even the most difficult work.]</inlineHelpText>
        <label>Understand difficult work</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Worry_about_poor_grades__c</fullName>
        <inlineHelpText>To what extent do you agree with the following statements? [I worry that I will get poor grades in English.] [I worry that I will get poor grades in mathematics.]</inlineHelpText>
        <label>Worry about poor grades</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student Submission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>